# omgpt

./: LICENSE  README.md  omgpt.py  pyproject.toml  shtool.py  test_shtool.py
omgpt/: __init__.py  shtool.py
tests/: test_shtool.py
