[tool.poetry]
name = "omgpt"
version = "0.1.0"
description = ""
authors = ["Youngwook Kim <youngwook.kim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
langchain = "^0.0.230"
prompt-toolkit = "^3.0.39"
openai = "^0.27.8"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pyright = "^1.1.316"
mypy = "^1.4.1"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
