[tool.poetry]
name = "omgpt"
version = "0.0.12"
description = "Simplify and enhance your command-line experience with the power of AI"
authors = ["Youngwook Kim <youngwook.kim@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/ywkim/omgpt"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.1"
langchain = ">=0.0.205,<0.1.0"
prompt-toolkit = "^3.0.39"
openai = "^0.27.8"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pyright = "^1.1.316"
mypy = "^1.4.1"
pylint = "^2.17.4"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
omgpt = "omgpt:main"

